# 3DViewer

./: .gitignore  tasks.txt
src/: CMakeLists.txt  Makefile  main.cpp  model_test.c
src/3DViewer/: 3dViewer.pro  main.cpp
src/3DViewer/model/: s21_affin_p.h
src/3DViewer/model/matrix_t/: s21_calc_complements.c
src/3DViewer/view/: myglwidget.cpp  myglwidget.h  window.h  window.ui
src/data/: position.h
src/gif/: gif.h
src/gif/src/gifimage/: qgifimage.cpp
src/ima/: qgifimage_p.h
src/model/: a.out  ivan.txt  main.c  s  s21_affin_p.c  s21_affin_p.h  s21_data_structure.h  s21_parse_obj.c  s21_parse_obj.h  test
src/model/matrix_t/: Makefile  s21_create_matrix.c  s21_determinant.c  s21_eq_matrix.c  s21_inverse_matrix.c  s21_matrix.h  s21_mult_number.c  s21_remove_matrix.c  s21_sub_matrix.c  s21_sum_matrix.c  s21_sum_sub.c  s21_transpose.c
src/tests/: affine_test.c  load_obj_test.c  suites.h
src/view/: Makefile  glviewer.cpp  glviewer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  moc_predefs.h  myglwidget.cpp  myglwidget.h  ui_mainwindow.h  untitled.pro  untitled.pro.user.1b3ba44  untitled.pro.user.f9ffd67  view.pro  window.cpp  window.h  window.ui  window.ui.autosave
src/view/.qtc_clangd/: compile_commands.json
src/view/.qtc_clangd/.cache/clangd/index/: QApplication.03021BD526016F3E.idx  QApplication.4D0EDD3AB2ACE634.idx  QDeadlineTimer.7958C2AC22C998E2.idx  QEvent.32BEE69EF3C67A18.idx  QGridLayout.16DDDCDD44097A41.idx  QHash.260E86631B9D84AB.idx  QImage.30D705EBF1C49DDB.idx  QLabel.D393827BABE61C19.idx  QLineEdit.16042C74B263D942.idx  QList.61C3008CE3E81F81.idx  QMainWindow.819BFA1334F9A4C1.idx  QMainWindow.BDE8D4B815B18CB7.idx  QMap.4E97CD844B92D1ED.idx  QMargins.6A37CA8B76283478.idx  QMatrix3x3.2849F0B938B8B1EB.idx  QMatrix4x4.01B3CA67849A9AF0.idx  QMutex.842969EDB15132C6.idx  QObject.FD860DF5CF68A846.idx  QOpenGLContext.B999B99414C07697.idx  QOpenGLWidget.1127D54394E5A7A8.idx  QOpenGLWidget.A5D79B7DFAF9C83D.idx  QPaintDevice.25BDBAA1218EEBAC.idx  QPaintDeviceWindow.A881BFBD1C27FB1F.idx  QPair.11F7465BB37E570C.idx  QPushButton.42B2E945E734235A.idx  QRadioButton.50560578FCA86EDA.idx  QRect.58D9A3FB62E2B3FE.idx  QScopedPointer.8C8107DAAD7FB511.idx  (+391 more)
src/view/build-viewer-Desktop_x86_darwin_generic_mach_o_32bit-Debug/: qtcsettings.cmake
src/view/build-viewer-Desktop_x86_darwin_generic_mach_o_32bit-Debug/.qtc_clangd/: compile_commands.json
src/view/untitled.app/Contents/: Info.plist
src/view/untitled.app/Contents/MacOS/: untitled
src/view/viewer/: CMakeLists.txt  mainwindow.ui
(+14 files in other folders)
